# financial-llm-eval-harness

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: core.yaml
examples/: eval_run_card.md  mock_run_summary.md
fin_eval/: __init__.py  adapters.py  cli.py  models.py  runner.py  schema.py  scoring.py
report_templates/: eval_report_template.md
tests/: test_runner.py  test_scoring.py
