[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-llm-eval-harness"
version = "0.1.0"
description = "Library-first evaluation harness for financial QA assistants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Johan"}]
keywords = ["llm", "evaluation", "finance", "qa", "citations"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.24",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
]

[project.scripts]
fin-eval = "fin_eval.cli:app"

[project.urls]
Homepage = "https://github.com/Jo2234/financial-llm-eval-harness"
Repository = "https://github.com/Jo2234/financial-llm-eval-harness"

[tool.setuptools.packages.find]
include = ["fin_eval*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
